<resources>
    <string name="app_name">Identifyer</string>
    <string name="inmate_full_name">Full Name: </string>
    <string name="inmate_gender">Gender: </string>
    <string name="inmate_date_of_birth">Date of Birth: </string>
    <string name="inmate_arrival_date">Arrival Date: </string>
    <string name="inmate_security_level">Security Level: </string>
    <string name="inmate_physical_wellness">Physical Wellness: </string>
    <string name="inmate_mental_wellness">Mental Wellness: </string>
    <string name="inmate_offense_list">Offense List: </string>
    <string name="inmate_offense_accomplices">Offense Accomplices: </string>
    <string name="inmate_combat_experience">Combat Experience: </string>
    <string name="inmate_additional_notes">Notes: </string>
    <string name="inmate_room_id">Room:</string>
    <string name="inmate_list">Inmate List</string>
    <string name="room_name_tv">Room Name:</string>
    <string name="room_tract_tv">Tract:</string>
    <string name="room_security_level_tv">Security Level:</string>
    <string name="room_max_capacity_tv">Max Capacity:</string>
    <string name="inmate_full_name_tv">Full Name:</string>
    <string name="inmate_gender_tv">Gender:</string>
    <string name="inmate_date_of_birth_tv">Date Of Birth:</string>
    <string name="inmate_arrival_date_tv">Arrival Date:</string>
    <string name="inmate_nationality_tv">Nationality:</string>
    <string name="inmate_sentence_tv">Sentence:</string>
    <string name="inmate_time_of_sentence_tv">Time of Sentence:</string>
    <string name="inmate_security_level_tv">Security Level:</string>
    <string name="inmate_physical_wellness_tv">Physical Wellness:</string>
    <string name="inmate_mental_wellness_tv">Mental Wellness:</string>
    <string name="inmate_combat_experience_tv">Combat Experience:</string>
    <string name="inmate_additional_notes_tv">Additional Notes:</string>
    <string name="inmate_room_id_tv">Room ID:</string>
    <string name="room_scanned_text">Room</string>
    <string name="load_database_help">Load Database Help:</string>
    <string name="load_database_hlep_title">Load Database:</string>
    <string name="synchronizes_the_database_with_the_server">Synchronizes the database with the Server</string>
    <string name="info_load_database_help_page">Makes a GET Request to the server. If the gathered data is empty, the current database stays as it is. If the data is not empty the current entries of the database will be deleted and the (new) data will be inserted into the database. Needs access to the internet.</string>
    <string name="room_help_page">Room Help</string>
    <string name="room_number_help_page">Room Number:</string>
    <string name="number_of_the_room_help_page">Number of the Room.</string>
    <string name="tract_help_page">Tract:</string>
    <string name="tract_of_the_prison__help_page">Tract of the Prison where the Room is located.</string>
    <string name="security_level_help_page">Security Level:</string>
    <string name="max_capacity_help_page">Max Capacity:</string>
    <string name="inmate_list_help_page_room">Inmate List:</string>
    <string name="inmates_help_help_page">Inmates Help</string>
    <string name="full_name_help_page">Full Name:</string>
    <string name="gender_help_page">Gender:</string>
    <string name="date_of_birth_help_page">Date of Birth:</string>
    <string name="arrival_date_help_page">Arrival Date:</string>
    <string name="nationality_help_page">Nationality:</string>
    <string name="sentence_help_page">Sentence:</string>
    <string name="security_level_help_page_inmate">Security Level:</string>
    <string name="physical_wellness_help_page">Physical Wellness:</string>
    <string name="mental_wellness_help_page">Mental Wellness:</string>
    <string name="combat_experience_help_page">Combat Experience:</string>
    <string name="additional_notes_help_page">Additional Notes:</string>

</resources>