<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".HelpActivity"
    android:paddingLeft="8sp"
    android:paddingRight="8sp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/load_database_help"
                android:textSize="20sp"
                android:fontFamily="@font/oswald_bold"
                android:paddingTop="10sp"
                android:paddingBottom="5sp"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1sp"
                android:background="@color/grey"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/load_database_hlep_title"
                android:fontFamily="@font/oswald_bold"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/synchronizes_the_database_with_the_server"
                android:fontFamily="@font/oswald_bold"
                android:textSize="12sp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/info_load_database_help_page"
                android:fontFamily="@font/oswald_regular"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/room_help_page"
                android:textSize="20sp"
                android:fontFamily="@font/oswald_bold"
                android:paddingTop="10sp"
                android:paddingBottom="5sp"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1sp"
                android:background="@color/grey"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/room_number_help_page"
                android:fontFamily="@font/oswald_bold"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/number_of_the_room_help_page"
                android:fontFamily="@font/oswald_regular"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/tract_help_page"
                android:fontFamily="@font/oswald_bold"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/tract_of_the_prison__help_page"
                android:fontFamily="@font/oswald_regular"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/security_level_help_page"
                android:fontFamily="@font/oswald_bold"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="The rooms degree of risk. (LOW, MEDIUM, HIGH) "
                android:fontFamily="@font/oswald_regular"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/max_capacity_help_page"
                android:fontFamily="@font/oswald_bold"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="The Room´s max capacity of inmates."
                android:fontFamily="@font/oswald_regular"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/inmate_list_help_page_room"
                android:fontFamily="@font/oswald_bold"
                />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="List of Inmates of a specific room with additional Information about the inmates."
                android:fontFamily="@font/oswald_regular"
                android:paddingBottom="10sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/inmates_help_help_page"
                android:textSize="20sp"
                android:fontFamily="@font/oswald_bold"
                android:paddingTop="5sp"
                android:paddingBottom="5sp"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="1sp"
                android:background="@color/grey"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text = "@string/full_name_help_page"
                android:fontFamily="@font/oswald_bold"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text = "Firstname and Lastname of the Inmate."
                android:fontFamily="@font/oswald_regular"
                />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text = "@string/gender_help_page"
                android:fontFamily="@font/oswald_bold"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text = "Gender of the inmate. (male, female, other)"
                android:fontFamily="@font/oswald_regular"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text = "@string/date_of_birth_help_page"
                android:fontFamily="@font/oswald_bold"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text = "Birthday of the inmate."
                android:fontFamily="@font/oswald_regular"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text = "@string/arrival_date_help_page"
                android:fontFamily="@font/oswald_bold"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text = "Date where the inmate arrived at the prison."
                android:fontFamily="@font/oswald_regular"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text = "@string/nationality_help_page"
                android:fontFamily="@font/oswald_bold"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text = "Nationalities of the Inmate."
                android:fontFamily="@font/oswald_regular"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text = "@string/sentence_help_page"
                android:fontFamily="@font/oswald_bold"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text = "Duration of the sentence."
                android:fontFamily="@font/oswald_regular"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text = "@string/security_level_help_page_inmate"
                android:fontFamily="@font/oswald_bold"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text = "The inmate´s degree of risk. (LOW, MEDIUM, HIGH)"
                android:fontFamily="@font/oswald_regular"
                />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text = "@string/physical_wellness_help_page"
                android:fontFamily="@font/oswald_bold"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text = "Information about the physical Wellness of the inmate."
                android:fontFamily="@font/oswald_regular"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text = "@string/mental_wellness_help_page"
                android:fontFamily="@font/oswald_bold"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text = "Information about the mental Wellness of the inmate."
                android:fontFamily="@font/oswald_regular"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text = "@string/combat_experience_help_page"
                android:fontFamily="@font/oswald_bold"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text = "The known experience in combat of the inmate. "
                android:fontFamily="@font/oswald_regular"
                />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text = "@string/additional_notes_help_page"
                android:fontFamily="@font/oswald_bold"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text = "Notes about the inmate."
                android:fontFamily="@font/oswald_regular"
                android:paddingBottom="10sp"
                />

        </LinearLayout>




    </ScrollView>



</LinearLayout>