<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_inmate_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:fontFamily="@font/oswald_bold"
            android:paddingTop= "4sp"
            android:paddingRight="8sp"
            android:text="@string/inmate_full_name_tv"
            />
        <TextView
            android:id="@+id/tv_inmate_full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:fontFamily="@font/oswald_regular"
            android:paddingTop= "4sp"
            />

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:paddingTop= "4dp"
            android:text="@string/inmate_gender_tv"
            android:fontFamily="@font/oswald_bold"
            android:paddingRight="8sp"
            />
        <TextView
            android:id="@+id/tv_inmate_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:paddingTop= "4dp"
            android:fontFamily="@font/oswald_regular"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:paddingTop= "4dp"
            android:paddingRight="8sp"
            android:text="@string/inmate_date_of_birth_tv"
            android:fontFamily="@font/oswald_bold"/>
        <TextView
            android:id="@+id/tv_inmate_date_of_birth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:paddingTop= "4dp"
            android:fontFamily="@font/oswald_regular"
            />

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:paddingTop= "4dp"
            android:paddingRight="8sp"
            android:text="@string/inmate_arrival_date_tv"
            android:fontFamily="@font/oswald_bold"
            />
        <TextView
            android:id="@+id/tv_inmate_arrival_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:paddingTop= "4dp"

            android:fontFamily="@font/oswald_regular"

            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:paddingTop= "4dp"
            android:paddingRight="8sp"
            android:text="@string/inmate_nationality_tv"
            android:fontFamily="@font/oswald_bold"
            />
        <TextView
            android:id="@+id/tv_inmate_nationality"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:paddingTop= "4dp"
            android:fontFamily="@font/oswald_regular"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:paddingTop= "4dp"
            android:paddingRight="8sp"
            android:text="@string/inmate_sentence_tv"
            android:fontFamily="@font/oswald_bold"
            />
        <TextView
            android:id="@+id/tv_inmate_sentence"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:paddingTop= "4dp"
            android:fontFamily="@font/oswald_regular"
            />
    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:paddingTop= "4dp"
            android:paddingRight="8sp"
            android:text="@string/inmate_security_level_tv"
            android:fontFamily="@font/oswald_bold"
            />
        <TextView
            android:id="@+id/tv_inmate_security_lvl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:paddingTop= "4dp"
            android:fontFamily="@font/oswald_regular"
            />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:paddingTop= "4dp"
            android:paddingRight="8sp"
            android:text="@string/inmate_physical_wellness_tv"
            android:fontFamily="@font/oswald_bold"
            />
        <TextView
            android:id="@+id/tv_inmate_physical_wellness"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:paddingTop= "4dp"
            android:fontFamily="@font/oswald_regular"
            />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:paddingTop= "4dp"
            android:paddingRight="8sp"
            android:text="@string/inmate_mental_wellness_tv"
            android:fontFamily="@font/oswald_bold"
            />
        <TextView
            android:id="@+id/tv_inmate_mental_wellness"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:paddingTop= "4dp"
            android:fontFamily="@font/oswald_regular"
            />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:paddingTop= "4dp"
            android:paddingRight="8sp"
            android:text="@string/inmate_combat_experience_tv"
            android:fontFamily="@font/oswald_bold"
            />
        <TextView
            android:id="@+id/tv_inmate_combat_experience"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:paddingTop= "4dp"
            android:fontFamily="@font/oswald_regular"
            />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:paddingTop= "4dp"
                android:paddingBottom="1dp"
                android:text="Offense List:"
                android:fontFamily="@font/oswald_bold"
                />
            <TextView
                android:id="@+id/tv_inmate_offense_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:paddingBottom="4dp"
                android:fontFamily="@font/oswald_regular"
                />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:paddingTop= "4dp"
            android:paddingBottom="1dp"
            android:text="@string/inmate_additional_notes_tv"
            android:fontFamily="@font/oswald_bold"
            />
        <TextView
            android:id="@+id/tv_inmate_additional_notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:paddingBottom="4dp"
            android:fontFamily="@font/oswald_regular"
            />
        </LinearLayout>
    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/black"
        android:paddingTop="7dp"/>



</LinearLayout>